--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fallout-quest-tracker",
   "version": "1.0.0",
   "engines": {
-    "node": "18.x"
+    "node": "24.x"
   },
   "description": "",
   "main": "server.js",
@@ -14,11 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
