--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build-client": "cd client && npm run build",
+    "postinstall": "npm run build-client || echo 'Client build skipped - check if needed'"
   },
   "keywords": [],
   "author": "",
